chore: lesson 2 cyclic rotation

--- a/codility/test/Tests.csproj
+++ b/codility/test/Tests.csproj
@@ -15,9 +15,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\src\SourceCode.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="FluentAssertions" />
   </ItemGroup>
 </Project>
